@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.105 2009-01-21 17:45:19 nicm Exp $
+# $Id: Makefile,v 1.106 2009-01-25 19:00:10 tcunha Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -39,7 +39,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-save-buffer.c cmd-select-pane.c cmd-split-window.c \
       cmd-resize-pane-up.c cmd-resize-pane-down.c cmd-kill-pane.c \
       cmd-up-pane.c cmd-down-pane.c cmd-choose-window.c cmd-choose-session.c \
-      cmd-suspend-client.c cmd-find-window.c \
+      cmd-suspend-client.c cmd-find-window.c cmd-load-buffer.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
       window-choose.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
