@@ -1,7 +1,7 @@
 " Vim syntax file
 " Language: tmux(1) configuration file
 " Maintainer: Tiago Cunha <me@tiagocunha.org>
-" Last Change: $Date: 2009-01-17 18:00:24 $
+" Last Change: $Date: 2009-01-25 19:00:10 $
 
 if version < 600
 	syntax clear
@@ -33,7 +33,7 @@ syn keyword tmuxCmds source[-file] info server-info clock-mode lock[-server]
 syn keyword tmuxCmds pass set-password saveb save-buffer downp down-pane killp
 syn keyword tmuxCmds kill-pane resizep-down resize-pane-down resizep-up
 syn keyword tmuxCmds resize-pane-up selectp select-pane splitw split-window
-syn keyword tmuxCmds upp up-pane choose-session choose-window
+syn keyword tmuxCmds upp up-pane choose-session choose-window loadb load-buffer
 
 syn keyword tmuxOptsSet prefix status status-fg status-bg bell-action
 syn keyword tmuxOptsSet default-command history-limit status-left status-right
