@@ -1,3 +1,7 @@
+25 January 2009
+
+* load-buffer command
+
 23 January 2009
 
 * Use reverse colours rather than swapping fg and bg for message, mode and
@@ -1004,7 +1008,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.233 2009-01-23 20:53:18 nicm Exp $
+$Id: CHANGES,v 1.234 2009-01-25 19:00:10 tcunha Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
